[tool.poetry]
name = "networking-patchpanel"
version = "0.1.0"
description = ""
authors = ["Michael Sherman <shermanm@uchicago.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
networking-generic-switch = "^7.0.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
